<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingBottom="40dp"
            android:paddingEnd="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/title_1"
                    style="@style/style_text_description"
                    android:text="@string/text_title_details_1"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_line"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/line_details"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/title_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.842" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_content_1"
                    style="@style/style_text_details"
                    android:text="@string/content_details_book1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_content_2"
                    style="@style/style_text_details_content"
                    android:text="@string/content_details_book1_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_content_1" />

                <TextView
                    android:id="@+id/text_content_3"
                    style="@style/style_text_details"
                    android:text="@string/content_details_book1_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_content_2" />

                <TextView
                    android:id="@+id/text_content_4"
                    style="@style/style_text_details_content"
                    android:text="@string/content_details_book1_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_content_3" />

                <View
                    android:id="@+id/view_show"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/custom_view_show_hide_details_book"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Xem thêm"
                    android:textColor="@color/gray"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/view_show"
                    app:layout_constraintEnd_toEndOf="@+id/view_show"
                    app:layout_constraintStart_toStartOf="@+id/view_show"
                    app:layout_constraintTop_toTopOf="@+id/view_show" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layout_hide_or_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_content_5"
                    style="@style/style_text_details"
                    android:text="@string/content_details_book1_4" />


                <TextView
                    android:id="@+id/text_content_6"
                    style="@style/style_text_details_content"
                    android:text="@string/content_details_book1_5" />

                <TextView
                    android:id="@+id/text_content_7"
                    style="@style/style_text_details"
                    android:text="@string/content_details_book1_6" />

                <TextView
                    android:id="@+id/text_content_8"
                    style="@style/style_text_details_content"
                    android:text="@string/content_details_book1_7" />

                <TextView
                    android:id="@+id/text_content_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="* * *"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/text_content_10"
                    style="@style/style_text_details_content"
                    android:text="@string/content_details_book1_8" />

                <TextView
                    android:id="@+id/text_content_11"
                    style="@style/style_text_details"
                    android:layout_marginStart="10dp"
                    android:text="@string/content_details_book1_9"
                    android:textColor="#03A9F4" />

                <TextView
                    android:id="@+id/text_content_12"
                    style="@style/style_text_details_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_text_view_content_details_book"
                    android:text="@string/content_details_book1_10"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/text_content_13"
                    style="@style/style_text_details"
                    android:layout_marginStart="10dp"
                    android:text="@string/content_details_book1_11"
                    android:textColor="#03A9F4" />

                <TextView
                    android:id="@+id/text_content_14"
                    style="@style/style_text_details_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_text_view_content_details_book"
                    android:text="@string/content_details_book1_12"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/text_content_15"
                    style="@style/style_text_details"
                    android:layout_marginStart="10dp"
                    android:text="@string/content_details_book1_13"
                    android:textColor="#03A9F4" />

                <TextView
                    android:id="@+id/text_content_16"
                    style="@style/style_text_details_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_text_view_content_details_book"
                    android:text="@string/content_details_book1_14"
                    android:textStyle="italic" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_content_17"
                        style="@style/style_text_details"
                        android:layout_marginStart="10dp"
                        android:text="@string/content_details_book1_15"
                        android:textColor="#03A9F4"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_content_18"
                        style="@style/style_text_details_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_text_view_content_details_book"
                        android:text="@string/content_details_book1_16"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_content_17" />

                    <View
                        android:id="@+id/view_hide"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/custom_view_show_hide_details_book"

                        app:layout_constraintBottom_toBottomOf="@id/text_content_18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tv_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thu gọn"
                        android:textColor="@color/gray"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/view_hide"
                        app:layout_constraintEnd_toEndOf="@+id/view_hide"
                        app:layout_constraintStart_toStartOf="@+id/view_hide"
                        app:layout_constraintTop_toTopOf="@+id/view_hide" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>