<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginHorizontal="30dp"
    android:background="@drawable/custom_item_content_books_2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_five_star"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="@font/mali"
        android:textColor="@color/black"
        android:layout_marginVertical="5dp"/>
    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:stepSize="0.1"
        android:rating="5"
        android:layout_gravity="center"
        android:numStars="5"
        android:theme="@style/RatingBar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        >
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:gravity="end"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:fontFamily="@font/patrickhand"
            android:text="@string/text_five_star2"/>
        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="18dp"
            android:fontFamily="@font/patrickhand"
            android:gravity="end"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:text="@string/text_five_star3"/>
    </LinearLayout>


</LinearLayout>


