<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:padding="10dp"
    android:layout_marginHorizontal="30dp"
    android:background="@drawable/custom_item_content_books_2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_upload_img"
        android:gravity="center"
        android:textSize="25dp"
        android:fontFamily="@font/mali"
        android:textColor="@color/black"
       />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_camera"/>
        <TextView
            android:id="@+id/add_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_upload_img2"
            android:textSize="20dp"
            android:fontFamily="@font/itim"
            android:textColor="#636161"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_photo"/>
        <TextView
            android:id="@+id/chooser_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_upload_img3"
            android:textSize="20dp"
            android:fontFamily="@font/itim"
            android:textColor="#636161"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>