<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="15dp"
    android:layout_gravity="bottom"
    android:id="@+id/dialog_function_notes_item"
    android:elevation="10dp"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_function_notes_items_2" />
        <TextView
            android:id="@+id/tv_delete"
            style="@style/style_text_dialog_change_color"
            android:textSize="18dp"
            android:layout_marginStart="10dp"
            android:text="@string/text_function_2"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="15dp"
        android:gravity="center">
        <ImageView

            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_function_notes_items_3" />
        <TextView
           android:id="@+id/tv_edit"
            style="@style/style_text_dialog_change_color"
            android:layout_marginStart="10dp"
            android:textSize="18dp"
            android:text="@string/text_function_1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView

            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_function_notes_items_1" />
        <TextView
            android:id="@+id/tv_change_color"
            style="@style/style_text_dialog_change_color"
            android:textSize="18dp"
            android:layout_marginStart="10dp"
            android:text="@string/text_function_3"
            />
    </LinearLayout>


</LinearLayout>